<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.10</version>
        <relativePath/>
    </parent>

    <groupId>com.mustafabulu</groupId>
    <artifactId>smart-pantry-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>smart-pantry-parent</name>

    <modules>
        <module>smart-pantry-common</module>
        <module>migros-service</module>
        <module>yemeksepeti-service</module>
        <module>discovery-server</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <archunit.version>1.4.1</archunit.version>
        <jacoco.version>0.8.12</jacoco.version>
        <sonar.coverage.jacoco.xmlReportPaths>${maven.multiModuleProjectDirectory}/smart-pantry-common/target/site/jacoco/jacoco.xml,${maven.multiModuleProjectDirectory}/migros-service/target/site/jacoco/jacoco.xml,${maven.multiModuleProjectDirectory}/yemeksepeti-service/target/site/jacoco/jacoco.xml,${maven.multiModuleProjectDirectory}/discovery-server/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
        <spring-cloud.version>2024.0.2</spring-cloud.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <id>jacoco-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>jacoco-report</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
